tweaked overflow hidden rule for https://github.com/presscustomizr/nimble-builder-pro/issues/73

--- a/assets/front/scss/_1_5_base.scss
+++ b/assets/front/scss/_1_5_base.scss
@@ -333,3 +333,4 @@
 
 // SEPT 2020 : Animate
 .sek-animate-candidate { opacity: 0;}
+.sek-overflow-hidden-when-animating [data-sek-level] { overflow-x: hidden;}
